--- a/README.rdoc
+++ b/README.rdoc
@@ -4,6 +4,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 
 == Releases
 - <b>0.0.1</b> Initial release
+- <b>0.0.3</b> Add collection name cleaning method
 
 == Running tests
 
