--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,8 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>0.0.1</b> Initial release
 - <b>0.0.3</b> Add collection name cleaning method
 - <b>0.0.5</b> Lock down the version of countries gem to avoid problems
+- <b>0.0.5</b> Lock down the version of countries gem to avoid problems
+- <b>0.0.7</b> Add in helper functions to check the .csv files for registration and metadata updates
 
 == Running tests
 
