--- a/README.rdoc
+++ b/README.rdoc
@@ -10,6 +10,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>0.0.7</b> Don't use this version, it uses the wrong method of Dir.pwd to find the root directory for loading assets.
 - <b>0.0.8</b> Add in helper functions to check the .csv files for registration and metadata updates
 - <b>0.0.9</b> Add in a clean marque function
+- <b>1.0.0</b> Make format fixing case insensitive; add a method for loading CSV files with UTF-8 compliance
 
 == Running tests
 
