--- a/README.rdoc
+++ b/README.rdoc
@@ -11,6 +11,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>0.0.8</b> Add in helper functions to check the .csv files for registration and metadata updates
 - <b>0.0.9</b> Add in a clean marque function
 - <b>1.0.0</b> Make format fixing case insensitive; add a method for loading CSV files with UTF-8 compliance
+- <b>1.0.1</b> Remove a couple methods from Revs code and update the methods to make them consistent in gem
 
 == Running tests
 
