--- a/README.rdoc
+++ b/README.rdoc
@@ -13,6 +13,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>1.0.0</b> Make format fixing case insensitive; add a method for loading CSV files with UTF-8 compliance
 - <b>1.0.1</b> Remove a couple methods from Revs code and update the methods to make them consistent in gem
 - <b>1.0.2 and 1.0.3</b> Make invalid two digit years in dates return as false
+- <b>1.0.4</b> Revs-Utils now assumes .csv files are in UTF-8 format instead of Latin-1
 
 == Running tests
 
