--- a/README.rdoc
+++ b/README.rdoc
@@ -16,6 +16,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>1.0.4</b> Revs-Utils now assumes .csv files are in UTF-8 format instead of Latin-1
 - <b>1.0.5</b> Parse location using commas as well as pipes
 - <b>1.0.6</b> Add some more conditions to CSV header checks
+- <b>1.0.7</b> Label column needs to be there but does not need to have a value to register
 
 == Running tests
 
