--- a/README.rdoc
+++ b/README.rdoc
@@ -20,7 +20,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>1.0.8</b> Update clean_collection_name method to deal with other possible names
 - <b>2.0.0</b> Updating to use ActionPack 4 for Rails 4 applications.  For Rails 3, continue to use 1.x.y releases.  
 - <b>2.0.1</b> Add more common format corrections
-- <b>2.0.2</b> Update valid for metadata method so it is not sensitive to blank or uppercase columns
+- <b>2.0.2 and 2.0.3</b> Update valid for metadata method so it is not sensitive to blank or uppercase columns
 
 == Running tests
 
