--- a/README.rdoc
+++ b/README.rdoc
@@ -21,6 +21,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>1.0.9</b> Add more common format corrections
 - <b>1.0.10</b> Update valid for metadata method so it is not sensitive to blank or uppercase columns
 - <b>1.0.11</b> Fix issues with year parsing
+- <b>1.0.12</b> Allow two digit years in year formatting
 
 == Running tests
 
