--- a/README.rdoc
+++ b/README.rdoc
@@ -22,6 +22,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>2.0.1</b> Add more common format corrections
 - <b>2.0.2 and 2.0.3</b> Update valid for metadata method so it is not sensitive to blank or uppercase columns
 - <b>2.0.4</b> Fix issues with year parsing
+- <b>2.0.10</b> Update to latest version of actionpack
 
 == Running tests
 
