--- a/README.rdoc
+++ b/README.rdoc
@@ -24,6 +24,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>1.0.12</b> Allow two digit years in year formatting
 - <b>1.0.19</b> Display output showing reasons for validation failures when checking manifests
 - <b>1.0.20</b> Allow for optional metadata columns in the manifest
+- <b>1.0.21</b> Add more information when sourceIDs are not unique
 
 == Running tests
 
