--- a/README.rdoc
+++ b/README.rdoc
@@ -27,6 +27,7 @@ Shared methods and functions used by revs-indexer, pre-assembly and bulk metadat
 - <b>2.1.10</b> Display output showing reasons for validation failures when checking manifests
 - <b>2.1.11</b> Allow for optional metadata columns in the manifest
 - <b>2.1.12</b> Score computation should work with any kind of hash key
+- <b>2.1.13</b> Add more information when sourceIDs are not unique
 
 == Running tests
 
